# llens

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docker/open-webui/: Dockerfile  patch-pyodide-prompt.py
docs/: code-interpreter.md  eval_results.md  evals.md  migration.md  stt.md
etc/: 01-hines.yaml  Caddyfile
etc/maintenance/: index.html
evals/: .gitignore  README.md  SPEC.md
evals/harness/: client.py
evals/scripts/: fetch_datasets.sh  run_phase.sh  summarize.py
evals/stt/: README.md  bench.py
filters/: pdf_vision_router.py  token_meter.py
monitoring/: prometheus.yml
owui/filters/: large_file_gate.py  self_vision.py  token_meter.py
owui/skills/: evaluation-scales.md  evaluation_scales.md  irb-protocol.md  large-file-handling.md  large_file_handling.md  medical-calculator.md  medical_calculator.md  opioid-conversion.md  opioid_conversion.md  vancomycin-tdm.md
owui/tools/: context_budget.py  medical_calculator.py  subagent.py  view_image.py
prompts/: code-interpreter.md  llens-common.md  llens-opts.md  llens.md
scripts/: owui-backup.sh  owui-restore.sh  owui-wal-flush.sh  sglang-deepseek-v3.2.sh  sglang-deepseek-v4-pro.sh  sglang-glm5.1.sh  sglang-glm5.sh  sglang-kimi-k2.6.sh  sglang-llm-jp-3-bench.sh  sglang-qwen3.5.sh  vllm-deepseek-v3.2.sh  vllm-glm5.sh
scripts/llm/: sglang-kimi-k2.6.sh  (+1 more)
tools/: mount_tool.py  password-generator.py
tools_and_skills/: medical_calculator.md  medical_calculator.py  password_generator.py  vancomycin_tdm.md
(+14 files in other folders)
