[project]
name = "llens"
version = "0.1.0"
description = "Large Language Enhanced Nexus System"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sglang[all]>=0.5.9",
    "nvidia-cudnn-cu12>=9.16.0.29",
]

[tool.uv]
override-dependencies = [
    "nvidia-cudnn-cu12>=9.16.0.29",
]
