[project]
name = "llens"
version = "0.1.0"
description = "Large Language Enhanced Nexus System"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sglang[all]>=0.5.10.post1",
    "nvidia-cudnn-cu12>=9.16.0.29",
    "transformers>=5.3.0",
]

[tool.uv]
override-dependencies = [
    "nvidia-cudnn-cu12>=9.16.0.29",
]

[dependency-groups]
evals = [
    "httpx>=0.27.0",
    "datasets>=2.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
]
